@@ -1,14 +1,14 @@
 Package: RnaSeqSampleSize
 Type: Package
 Title: RnaSeqSampleSize
-Version: 1.1.2
-Date: 2014-02-04
+Version: 1.1.3
+Date: 2014-02-17
 Author: Shilin Zhao, Chung-I Li, Quanhu Sheng, Yu Shyr
 Maintainer: Shilin Zhao <shilin.zhao@vanderbilt.edu>
-Description: RnaSeqSampleSize package provides a sample size calculation method
-    based on negative binomial model and the exact test for assessing
-    differential expression analysis of RNA-seq data
+Description: RnaSeqSampleSize package provides a sample size calculation method based on negative binomial model and the exact test for assessing differential expression analysis of RNA-seq data
 License: GPL (>= 2)
 LazyLoad: yes
 Depends:
     ssanv
+Collate:
+    'RnaSeqSampleSize.R'
