@@ -1,3 +1,7 @@
+2014-02-17
+RnaSeqSampleSize 1.1.3:
+The algorithm was improved to decrease the memory usage;
+
 2014-02-04
 RnaSeqSampleSize 1.1.2:
 (1) A more detail parameter to sample size table was provided;
